# ROS2_Study

Projects/URDF_Basics/launch/: display.launch.py
Projects/arduino_first/: package.xml  setup.cfg  setup.py
Projects/arduino_first/arduino_first/: alert_node.py  arduino_node.py  processing_node.py
Projects/arduino_first/launch/: launch.py
Projects/dg_first_package/: README.md  package.xml  setup.cfg  setup.py
Projects/dg_first_package/DGpackage/: publisher.py  subscriber.py
Projects/my_cpp_pkg/: CMakeLists.txt  package.xml
Projects/my_cpp_pkg/launch/: launch.py
Projects/my_cpp_pkg/src/: alert_node.cpp  processing_node.cpp  sensor_node.cpp
Projects/turtle_ai_project/: inference.py
SLAM_Navigation/scripts/: turtle_mover.py
URDF_Basics/scripts/: joint_publisher.py
